--- a/views/index.ejs
+++ b/views/index.ejs
@@ -538,7 +538,7 @@
         </div>
         <style>
           header.masthead{
-            background-image: url(https://static.aproveitaabc.com.br/images/5013_doce.png);
+            background-image: url(https://www.sociedadedacarne.com.br/blog/wp-content/uploads/2018/08/picanha_argentina-800x445.jpg);
           }
         </style>
         <!-- Bootstrap core JS-->
